Added 'preinstall' script

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "node-gyp configure build",
     "debug": "node-gyp configure build --debug",
     "test": "./node_modules/plz/bin/plz -v clean test",
+    "preinstall": "./node_modules/plz/bin/plz -v build",
     "prepublish": "./node_modules/plz/bin/plz -v build"
   },
   "repository": {
