--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ before_install:
 # We need this line to have g++4.8 available in apt
   - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
   - sudo apt-get update -qq
+  - npm install -g plz
 install:
   - sudo apt-get install -qq gcc-4.8 g++-4.8
 # We want to compile with g++ 4.8 when rather than the default g++
