Call global plz instance for preinstall/prepublish

--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "build": "node-gyp configure build",
     "debug": "node-gyp configure build --debug",
     "test": "./node_modules/plz/bin/plz -v clean test",
-    "preinstall": "./node_modules/plz/bin/plz -v build",
-    "prepublish": "./node_modules/plz/bin/plz -v build"
+    "preinstall": "plz -v build",
+    "prepublish": "plz -v build"
   },
   "repository": {
     "type": "git",
