--- a/.travis.yml
+++ b/.travis.yml
@@ -7,15 +7,12 @@ before_install:
 # We need this line to have g++4.8 available in apt
   - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
   - sudo apt-get update -qq
-  - npm install plz
-  - npm install coffee-script
-  - npm install mocha
-  - npm install expect.js
-  - npm install q
+  - npm update
   # Put local npm modules .bin on PATH
   - export PATH=./node_modules/.bin/:$PATH
   # Install node-gyp and node-pre-gyp so it is available for packaging and publishing
   - npm install node-gyp -g
+  - npm run-script clean
   - npm run-script build
 install:
   - sudo apt-get install -qq gcc-4.8 g++-4.8
@@ -26,5 +23,3 @@ install:
   # test our module
   - npm test
 after_success:
-  # if success then query and display all published binaries
-  - node-pre-gyp info
