--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
   },
   "homepage": "https://github.com/oorabona/node-liblzma",
   "dependencies": {
-    "coffee-script": "^1.8.0"
+    "coffee-script": "latest"
   },
   "devDependencies": {
     "expect.js": "^0.3.1",
