--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ before_install:
 # We need this line to have g++4.8 available in apt
   - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
   - sudo apt-get update -qq
-  - npm update
+  - npm install coffee-script
   # Put local npm modules .bin on PATH
   - export PATH=./node_modules/.bin/:$PATH
   # Install node-gyp and node-pre-gyp so it is available for packaging and publishing
