--- a/.travis.yml
+++ b/.travis.yml
@@ -7,13 +7,11 @@ before_install:
 # We need this line to have g++4.8 available in apt
   - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
   - sudo apt-get update -qq
-  - npm install coffee-script
+  - npm update
   # Put local npm modules .bin on PATH
   - export PATH=./node_modules/.bin/:$PATH
   # Install node-gyp and node-pre-gyp so it is available for packaging and publishing
   - npm install node-gyp -g
-  - npm install plz -g
-  - npm run-script clean
 before_script:
   - coffee -c -o lib src
 install:
