--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "clean": "rm -rf node_modules build",
     "build": "node-gyp configure build",
     "debug": "node-gyp configure build --debug",
-    "test": "./node_modules/plz/bin/plz -v clean test",
-    "preinstall": "./node_modules/plz/bin/plz -v build",
-    "prepublish": "./node_modules/plz/bin/plz -v build"
+    "test": "./node_modules/.bin/plz -v clean test",
+    "preinstall": "./node_modules/.bin/plz -v build",
+    "prepublish": "./node_modules/.bin/plz -v build"
   },
   "repository": {
     "type": "git",
@@ -39,9 +39,9 @@
   },
   "homepage": "https://github.com/oorabona/node-liblzma",
   "dependencies": {
-    "coffee-script": "latest"
   },
   "devDependencies": {
+    "coffee-script": "latest",
     "expect.js": "^0.3.1",
     "plz": "^2.0.3",
     "mocha": "^1.21.4",
