--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-liblzma",
-  "version": "0.4.0",
+  "version": "0.4.1-rc1",
   "description": "Liblzma bindings for NodeJS",
   "main": "./lib/coffee/XzStream.js",
   "scripts": {
