--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "node-liblzma",
-  "version": "0.4.1-rc1",
+  "version": "0.4.1-rc2",
   "description": "Liblzma bindings for NodeJS",
-  "main": "./lib/coffee/XzStream.js",
+  "main": "./lib/XzStream.js",
   "scripts": {
     "clean": "rm -rf node_modules build",
     "build": "node-gyp configure build",
@@ -39,11 +39,11 @@
   },
   "homepage": "https://github.com/oorabona/node-liblzma",
   "dependencies": {
+    "plz": "^2.0.3"
   },
   "devDependencies": {
     "coffee-script": "latest",
     "expect.js": "^0.3.1",
-    "plz": "^2.0.3",
     "mocha": "^1.21.4",
     "q": "^1.0.1"
   }
