--- a/build.yml
+++ b/build.yml
@@ -7,6 +7,8 @@ settings:
   toClean: ['lib', 'build']
   srcPath: 'src'
   libPath: 'lib'
+  mocha:
+    useCoffee: true
 clean:
   - node-gyp clean
 build_module:
