--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-liblzma",
-  "version": "0.4.5",
+  "version": "0.4.5-1",
   "description": "Liblzma bindings for NodeJS",
   "main": "./lib/XzStream.js",
   "scripts": {
@@ -36,10 +36,10 @@
   },
   "homepage": "https://github.com/oorabona/node-liblzma",
   "dependencies": {
+    "coffee-script": "*",
     "ubs": "^0.4.0"
   },
   "devDependencies": {
-    "coffee-script": "*",
     "expect.js": "^0.3.1",
     "mocha": "^2.0.1",
     "q": "^1.0.1"
