--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "node-liblzma",
-  "version": "0.4.5-1",
+  "version": "0.4.6",
   "description": "Liblzma bindings for NodeJS",
   "main": "./lib/XzStream.js",
   "scripts": {
     "test": "./node_modules/ubs/bin/ubs test",
-    "install": "./node_modules/ubs/bin/ubs build_coffee"
+    "prepublish": "./node_modules/ubs/bin/ubs build_coffee"
   },
   "repository": {
     "type": "git",
