Use Travis CI container-based infrastructure
Set the compiler to `g++-4.8` using environment variables,
rather than via sudo `update-alternatives`.

Follow-up to 17d05166d7500b3a5e9293d2402ab448a020c821

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ node_js:
   - "0.11"
   - "0.12"
   - "4.2"
+sudo: false
 addons:
   apt:
     sources:
@@ -20,7 +21,7 @@ before_install:
   - npm install -g coffee-script
 install:
   # We want to compile with g++ 4.8 when rather than the default g++
-  - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-4.8 90
+  - export CXX="g++-4.8" CC="gcc-4.8"
   # Ensure source install works and compiles correctly
   - npm install
   # test our module
