--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ node_js:
   - "0.10"
   - "0.11"
   - "0.12"
-  - "4.4"
+  - "4"
   - "5.11"
   - "6.2"
 sudo: false
@@ -15,12 +15,14 @@ addons:
       - gcc-4.9
       - g++-4.9
       - liblzma-dev
+# We want to compile with g++ 4.9 when rather than the default g++
+env:
+  - CXX=g++-4.9
+  - CC=gcc-4.9
 before_install:
   # Install node-gyp and node-pre-gyp so it is available for packaging and publishing
   - npm install node-gyp -g
 install:
-  # We want to compile with g++ 4.9 when rather than the default g++
-  - export CXX="g++-4.9" CC="gcc-4.9"
   # Ensure source install works and compiles correctly
   - COMPILE=1 npm install
   # test our module
