--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ env:
   - CXX=g++-4.9
 before_install:
   # Install node-gyp and node-pre-gyp so it is available for packaging and publishing
-  - npm install node-gyp -g
+  - npm install node-pre-gyp -g
 install:
   # Ensure source install works and compiles correctly
   - COMPILE=1 npm install
