--- a/.npmignore
+++ b/.npmignore
@@ -1,1 +1,15 @@
 test/
+/.DS_Store
+/node_modules/
+.plz
+build/
+*.log
+deps/
+*.gz
+core
+build/
+test/
+npm-debug.log
+README.md.xz
+.travis*
+appveyor.yml
