Updated XZ source tarball URL and increased version.
The URL was invalid (only can only be one xz).

I have also increased the version from 5.2.2 to 5.2.3 for the glory of the empire.

http://git.tukaani.org/?p=xz.git;a=blob;f=NEWS;hb=HEAD

--- a/build.yml
+++ b/build.yml
@@ -9,8 +9,8 @@ settings:
     env:
       CPPFLAGS: "-fPIC"
       CFLAGS: "-O3"
-  xzWebUrl: 'http://tukaani.org/xz/xz'
-  xzVersion: '5.2.2'
+  xzWebUrl: 'http://tukaani.org/xz'
+  xzVersion: '5.2.3'
   xzExt: 'gz'
   clean:
     path: ['lib', '*.log']
