Comment out autogen as the new LZMA uses a more recent autoconf version.
This might also need a touch to prevent something automatically running autoconf.

I am concerned about why that line was there to begin with. Superstition or did it actually solve a problem?

--- a/build.yml
+++ b/build.yml
@@ -37,7 +37,7 @@ build_lzma:
   - rm -rf deps
   - task: fetch_lzma
   - cd deps/xz
-  - ./autogen.sh
+  # - ./autogen.sh
   - ./configure --prefix=`pwd` --enable-threads --enable-static --disable-shared --disable-scripts --disable-lzmainfo
     --disable-lzma-links --disable-lzmadec --disable-xzdec --disable-xz --disable-rpath
   - make
