--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   },
   "homepage": "https://github.com/oorabona/node-liblzma",
   "dependencies": {
+    "coffee-script": "*",
     "nan": "latest",
     "node-pre-gyp": "latest",
     "ubs": "latest"
